--- a/index.html
+++ b/index.html
@@ -1,2 +1,65 @@
-This is a Placeholder.
-Soon you will find everything you need here!
+<html>
+    <head>
+        <title>New Republic</title>
+        <link rel="icon" href="./files/icon.png" type="image/icon type">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+
+        <div class="titlediv">
+            <img src="files/flag.png" class="headerflag">
+            <div class="center bold verdana title">New Republic</div>
+        </div>
+
+        <h1 class="center bold ul verdana color-black">🇺🇳 » ABOUT « 🇩🇪</h1>
+        <h2 class="center bold">🇺🇳</h3>
+        <h3 class="center bold mono color-black">
+            !» Of course we do not want to actually declare Independence or start any Wars with other Nations.
+            <br><br>
+            The New Republic is a Nation aimed at bringing true Democracy to the People and making Politics help the People and not the rich.
+            <br>
+            Currently we are unorganized, but soon you will find Government Buildings, apply for Citizenship along your actual Citizenship and be able to start political movements!
+            <br>
+            <br>
+        </h3>
+        <h2 class="center bold">🇩🇪</h3>
+        <h3 class="center bold mono color-black">
+            !» Natürlich wollen wir nicht wirklich Unabhängigkeit erklären oder Kriege mit anderen Nationen starten.
+            <br><br>
+            Die Neue Republik ist eine Nation mit dem Ziel wahre Demokratie zum Volk zu bringen und Politik dem Volk, nicht den Reichen, helfen zu lassen.
+            <br>
+            Momentan sind wir nicht organisiert, aber bald werdet ihr Staatsgebäude finden, euch für eine Bürgerschaft neben eurer eigentlichen bewerben zu können und politische Bewegungen starten können!
+            <br>
+            <br>
+        </h3>
+
+        <h1 class="center bold ul verdana color-black">» SOCIAL «</h1>
+        <h3 class="center bold mono color-black">
+            Matrix DM: <br><a href=".https://matrix.to/#/@newrepublic:matrix.org">@newrepublic:matrix.org</a>
+            <br><br>Matrix Space: <br><a href="https://matrix.to/#/#new-republic-gov:matrix.org">#new-republic-gov:matrix.org</a>
+            <br><br>Discord Server: <br><a href="https://dsc.gg/newrepublic">dsc.gg/newrepublic</a>
+            <br><br>Session ID:<br><a href="./index.html">058bc6a5a812d5e51c440805b45d608f4713eb51b8988d72355bee9e952f3ab269</a>
+            <br><br>Briar: <br>Currently unavailable!
+            <br><br>Mastodon Official: <br><a href="https://mastodon.social/@newrepublic">@newrepublicl</a>
+            <br><br>TikTok<br><a href="https://www.tiktok.com/@newrepublic.gov">@newrepublic.gov</a>
+            <br><br>YouTube<br><a href="https://www.youtube.com/channel/UCvrJDrMn-PvDGdSJ3tNaFUg">New Republic</a>
+            <br><br>Monero Address for Donations:<br><a href="./index.html">4849nBdp1svb8gjbmfg9AXBLt7QyVN3JVQ7PGrwgE2LkSmxsLh2BxgjU77mkc8Ca3bJzkgnnEYQvmJjjZb3emyCKAJPXvAT</a>
+        </h3>
+
+        <h1 class="center bold ul verdana color-black">🇺🇳 » LAW | GESETZE « 🇩🇪</h1>
+        <h2 class="center bold">🇺🇳</h2>
+        <h3 class="center bold mono color-black">
+            link coming soon!
+            <br>
+        </h3>
+        <h2 class="center bold">🇩🇪</h2>
+        <h3 class="center bold mono color-black">
+            link kommt bald!
+            <br>
+        </h3>
+
+        <h1 class="center bold verdana color-black">REMEMBER! This Site is Work-in-Progress!</h1>
+
+    </body>
+</html>
