--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <br><br>Matrix Space: <br><a href="https://matrix.to/#/#new-republic-gov:matrix.org">#new-republic-gov:matrix.org</a>
             <br><br>Discord Server: <br><a href="https://dsc.gg/newrepublic">dsc.gg/newrepublic</a>
             <br><br>Session ID:<br><a href="./index.html">058bc6a5a812d5e51c440805b45d608f4713eb51b8988d72355bee9e952f3ab269</a>
-            <br><br>Briar: <br>Currently unavailable!
             <br><br>Mastodon Official: <br><a href="https://mastodon.social/@newrepublic">@newrepublicl</a>
             <br><br>TikTok<br><a href="https://www.tiktok.com/@newrepublic.gov">@newrepublic.gov</a>
             <br><br>YouTube<br><a href="https://www.youtube.com/channel/UCvrJDrMn-PvDGdSJ3tNaFUg">New Republic</a>
+            <br><br>Odysee (YT Alternative)<br><a href="./index.html">@NewRepublic (NOT ONLINE YET!)</a>
             <br><br>Monero Address for Donations:<br><a href="./index.html">4849nBdp1svb8gjbmfg9AXBLt7QyVN3JVQ7PGrwgE2LkSmxsLh2BxgjU77mkc8Ca3bJzkgnnEYQvmJjjZb3emyCKAJPXvAT</a>
         </h3>
 
