--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <br><br>
             The New Republic is a Nation aimed at bringing true Democracy to the People and making Politics help the People and not the rich.
             <br>
+            On the 16th of July, the Constitution was signed.
+            <br>
             Currently we are unorganized, but soon you will find Government Buildings, apply for Citizenship along your actual Citizenship and be able to start political movements!
             <br>
             <br>
@@ -29,33 +31,39 @@
             <br><br>
             Die Neue Republik ist eine Nation mit dem Ziel wahre Demokratie zum Volk zu bringen und Politik dem Volk, nicht den Reichen, helfen zu lassen.
             <br>
+            Am 16. Juli 2022 wurde die Verfassung signiert.
+            <br>
             Momentan sind wir nicht organisiert, aber bald werdet ihr Staatsgebäude finden, euch für eine Bürgerschaft neben eurer eigentlichen bewerben zu können und politische Bewegungen starten können!
             <br>
             <br>
         </h3>
 
-        <h1 class="center bold ul verdana color-black">» SOCIAL «</h1>
+        <h1 class="center bold ul verdana color-black">» SOCIAL & CONTACT «</h1>
         <h3 class="center bold mono color-black">
-            Matrix DM: <br><a href=".https://matrix.to/#/@newrepublic:matrix.org">@newrepublic:matrix.org</a>
+            <br><br>Phone Number: <br><a href="./index.html">COMING SOON | We wont call back!</a>
+            <br><br>You can also message us through Signal and SMS using this Phone Number.
+            <br><br>Matrix DM: <br><a href=".https://matrix.to/#/@newrepublic:matrix.org">@newrepublic:matrix.org</a>
             <br><br>Matrix Space: <br><a href="https://matrix.to/#/#new-republic-gov:matrix.org">#new-republic-gov:matrix.org</a>
             <br><br>Discord Server: <br><a href="https://dsc.gg/newrepublic">dsc.gg/newrepublic</a>
             <br><br>Session ID:<br><a href="./index.html">058bc6a5a812d5e51c440805b45d608f4713eb51b8988d72355bee9e952f3ab269</a>
             <br><br>Mastodon Official: <br><a href="https://mastodon.social/@newrepublic">@newrepublicl</a>
             <br><br>TikTok<br><a href="https://www.tiktok.com/@newrepublic.gov">@newrepublic.gov</a>
             <br><br>YouTube<br><a href="https://www.youtube.com/channel/UCvrJDrMn-PvDGdSJ3tNaFUg">New Republic</a>
-            <br><br>Odysee (YT Alternative)<br><a href="./index.html">@NewRepublic (NOT ONLINE YET!)</a>
+            <br><br>Odysee (YT Alternative)<br><a href=".https://odysee.com/@NewRepublic">@NewRepublic</a>
             <br><br>Monero Address for Donations:<br><a href="./index.html">4849nBdp1svb8gjbmfg9AXBLt7QyVN3JVQ7PGrwgE2LkSmxsLh2BxgjU77mkc8Ca3bJzkgnnEYQvmJjjZb3emyCKAJPXvAT</a>
         </h3>
 
         <h1 class="center bold ul verdana color-black">🇺🇳 » LAW | GESETZE « 🇩🇪</h1>
         <h2 class="center bold">🇺🇳</h2>
         <h3 class="center bold mono color-black">
-            link coming soon!
+            Constitution:
+            <br>ONLY AVAILABLE IN GERMAN AT THE MOMENT!
             <br>
         </h3>
         <h2 class="center bold">🇩🇪</h2>
         <h3 class="center bold mono color-black">
-            link kommt bald!
+            Verfassung:
+            <br><a href="">Verfassung der Neuen Republik, 16.07.2022</a>
             <br>
         </h3>
 
