--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <div class="center bold verdana title">New Republic</div>
         </div>
 
+
+        <h1 class="center bold verdana color-black">REMEMBER! This Site is Work-in-Progress!<br><br></h1>
+        
         <h1 class="center bold ul verdana color-black">🇺🇳 » ABOUT « 🇩🇪</h1>
         <h2 class="center bold">🇺🇳</h3>
         <h3 class="center bold mono color-black">
@@ -66,8 +69,6 @@
             <br><a href="">Verfassung der Neuen Republik, 16.07.2022</a>
             <br>
         </h3>
-
-        <h1 class="center bold verdana color-black">REMEMBER! This Site is Work-in-Progress!</h1>
 
     </body>
 </html>
