--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2 class="center bold">🇩🇪</h2>
         <h3 class="center bold mono color-black">
             Verfassung:
-            <br><a href="">Verfassung der Neuen Republik, 16.07.2022</a>
+            <br><a href="https://github.com/new-republic-gov/new-republic-gov.github.io/blob/main/files/constitution/constitution-de-signed.pdf">Verfassung der Neuen Republik, 16.07.2022</a>
             <br>
         </h3>
 
